--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,59 @@
 @tailwind utilities;
 
 @layer components {
-  img {
-    @apply object-cover object-center
-  }
+    img {
+        @apply object-cover object-center
+    }
 
-  .btn {
-    @apply hover:bg-sky-500/10 hover:text-sky-700 p-3 lg:py-2 font-semibold rounded-lg transition-colors duration-300 ease-in-out;
-  }
+    /* clears the ‘X’ from Internet Explorer search input fields */
+    input[type=search]::-ms-clear {
+        @apply w-0 h-0 hidden appearance-none
+    }
+    input[type=search]::-ms-reveal {
+        @apply w-0 h-0 hidden appearance-none
+    }
+    /* clears the ‘X’ from Chrome search input fields */
+    input[type="search"]::-webkit-search-decoration,
+    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-results-button,
+    input[type="search"]::-webkit-search-results-decoration {
+        @apply appearance-none
+    }
+
+    .custom-scrollbar::-webkit-scrollbar {
+        @apply block h-3 w-3
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-track {
+        @apply rounded-xl bg-slate-300/50 dark:bg-slate-500/50 my-0.5 box-border bg-clip-content
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+        @apply bg-slate-500/50 dark:bg-slate-900/50 rounded-xl box-border bg-clip-content
+    }
+
+
+   .custom-scrollbar {
+        scrollbar-width: thin;
+        -ms-overflow-style: thin;
+        @apply dark:[scrollbar-color:rgb(15_23_42_/_0.5)_rgb(100_116_139_/_0.5)] [scrollbar-color:rgb(100_116_139_/_0.5)_rgb(203_213_225_/_0.5)] rounded-xl box-border bg-clip-content
+    }
+
+
+    .no-scrollbar {
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+
+    .no-scrollbar::-webkit-scrollbar {
+        @apply hidden
+    }
+
+    .btn {
+        @apply hover:bg-sky-500/10 hover:text-sky-700 p-3 lg:py-2 font-semibold rounded-lg transition-colors duration-300 ease-in-out;
+    }
+
+    .search-input {
+        @apply border-none outline-none ring-0 focus:ring-0 focus:outline-none focus:border-none py-2 pl-2 placeholder:text-inherit placeholder:font-semibold pr-4
+    }
 }
