--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@
     }
 
     .btn {
-        @apply hover:bg-sky-500/10 hover:text-sky-700 p-3 lg:py-2 font-semibold rounded-lg transition-colors duration-300 ease-in-out;
+        @apply hover:bg-sky-500/10 hover:text-sky-700 p-3 lg:py-2 font-semibold rounded-lg transition-colors duration-300 ease-in-out dark:hover:text-sky-400 dark:hover:bg-[#7dd3fc1a]
     }
 
     .search-input {
@@ -59,6 +59,6 @@
     }
 
     .input-checkbox {
-        @apply form-checkbox cursor-pointer
+        @apply form-checkbox cursor-pointer ring-offset-white hover:ring-1 hover:ring-offset-2 hover:ring-sky-700 focus-within:ring-1 focus-within:ring-offset-2 focus-within:ring-sky-700
     }
 }
